--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1> Homepage test </h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>My first web pagee</title>
+        <style>
+            img{width: 500px;
+                border-radius: 10px;
+                float: left;
+                margin-right:10px}
+            .username {font-weight: bold;}
+        </style>
+    </head>
+    <body>
+      <img src="Resources/assets/images/fig1.png" alt="Data type 1">  
+      <a href="Resources/assets/images/fig1.png" download> MY PHOTO</a>
+      
+      <a href="#CSS-SECTION">CSS</a>
+      
+      <p class="username">@leila_data</p>
+        
+      <h2>HTML</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt aspernatur reprehenderit velit quo placeat inventore vel. Praesentium quo ab accusamus voluptatibus? Numquam, atque non? Voluptatem id maxime ad placeat sunt?</p>
+      
+      <h2 id="section-css">CSS !!</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque eligendi, tempore, nisi impedit voluptas aut sed dolorum debitis similique voluptatem corrupti hic eos culpa. Maiores minus, fugiat rerum nulla ratione nisi inventore eveniet perspiciatis explicabo dolorum nemo, esse unde obcaecati iusto voluptas excepturi dignissimos, natus veritatis. Ipsa ab ut deserunt accusantium, architecto libero, facere perspiciatis molestiae autem adipisci beatae porro vero? Accusamus dignissimos assumenda totam a doloremque ipsam nobis possimus, quidem repudiandae impedit at cum, nihil fuga quia culpa voluptas nostrum. Sunt facere quia quas similique, ex nostrum! A non esse, aliquid rem similique dolorem cum enim iste aliquam repellat quas omnis excepturi! Velit perspiciatis quae, ex vero ea explicabo quidem inventore voluptatem quasi similique, excepturi aut libero cum, a est. Quam accusantium perferendis illo autem pariatur eveniet a nihil nostrum aspernatur delectus. Quos dolorem nulla officia, voluptates beatae animi? Expedita, ut voluptatum obcaecati sed atque consectetur ex! Laboriosam quod reiciendis in impedit error inventore velit consequatur ipsum quidem ex ipsa commodi numquam ullam qui veritatis, provident temporibus harum accusamus quis, possimus aliquid labore debitis. Temporibus beatae non corrupti, tempore consequuntur quia eligendi nesciunt! Perspiciatis illum ipsa culpa ipsam, excepturi laborum? Praesentium aliquam harum, adipisci id mollitia eveniet nostrum consequatur.</p>
+    </body>
+</html>
