--- a/index.html
+++ b/index.html
@@ -71,31 +71,34 @@
                     <div class="row" style="padding-bottom: 30px;">
                       <div class="col-6">
                         <a href="max_temperature.html">
-                          <img class="panel active" src="Resources/assets/Images/Fig1.png" alt="Max Temperature Image">
+                          <img class="panel active" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
                         </a>
                       </div>
 
                       <div class="col-6">
                         <a href="humidity.html">
-                          <img class="panel" src="Resources/assets/Images/Fig2.png" alt="Humidity Graph">
+                          <img src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
                         </a>
                       </div>
+                    </div>
 
+                    <div class="row" style="padding-bottom: 30px;">  
                       <div class="col-6">
                         <a href="cloudiness.html">
-                          <img class="panel" src="Resources/assets/Images/Fig3.png" alt="Cloudiness Graph">
+                          <img src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
                         </a>
                       </div>
 
                       <div class="col-6">
                         <a href="wind_speed.html">
-                          <img class="panel" src="Resources/assets/Images/Fig4.png" alt="Wind Speed Graph">
+                          <img src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
                         </a>
                       </div>
                     </div>
+                      
+                  </div>
                 </div>
             </div>
-          </div>
         </div>
     </div>
     
