--- a/cloudiness.html
+++ b/cloudiness.html
@@ -72,12 +72,12 @@
                 <div class="row" style="padding-bottom: 30px;">
                     <div class="col-6">
                         <a href="max_temperature.html">
-                        <img class="panel" src="Resources/assets/Images/Fig1.png" alt="Max Temperature Image">
+                        <img src="Resources/assets/Images/Fig1.png" alt="Max Temperature Image">
                         </a>
                     </div>
                     <div class="col-6">
                         <a href="humidity.html">
-                        <img class="panel" src="Resources/assets/Images/Fig2.png" alt="Humidity Graph">
+                        <img src="Resources/assets/Images/Fig2.png" alt="Humidity Graph">
                         </a>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="col-6">
                         <a href="wind_speed.html">
-                        <img class="panel" src="Resources/assets/Images/Fig4.png" alt="Wind Speed Graph">
+                        <img src="Resources/assets/Images/Fig4.png" alt="Wind Speed Graph">
                         </a>
                     </div>
                 </div>    
