--- a/wind_speed.html
+++ b/wind_speed.html
@@ -76,12 +76,12 @@
                         <div class="row" style="padding-bottom: 30px;">
                             <div class="col-6">
                                 <a href="max_temperature.html">
-                                    <img class="panel" src="Resources/assets/Images/Fig1.png" alt="Max Temperature Image"> 
+                                    <img src="Resources/assets/Images/Fig1.png" alt="Max Temperature Image"> 
                                 </a>
                             </div>
                             <div class="col-6">
                                 <a href="humidity.html">
-                                  <img class="panel" src="Resources/assets/Images/Fig2.png" alt="Humidity Graph">
+                                  <img src="Resources/assets/Images/Fig2.png" alt="Humidity Graph">
                                 </a>
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                         <div class="row" style="padding-bottom: 30px;">
                             <div class="col-6">
                             <a href="cloudiness.html">
-                                <img class="panel" src="Resources/assets/Images/Fig3.png" alt="Cloudiness Graph">
+                                <img src="Resources/assets/Images/Fig3.png" alt="Cloudiness Graph">
                             </a>
                             </div>
                             <div class="col-6">
