--- a/Index.html
+++ b/Index.html
@@ -77,19 +77,19 @@
 
                       <div class="col-6">
                         <a href="humidity.html">
-                          <img class="panel" src="Resources/assets/Images/Fig2.png" alt="Humidity Graph">
+                          <img src="Resources/assets/Images/Fig2.png" alt="Humidity Graph">
                         </a>
                       </div>
 
                       <div class="col-6">
                         <a href="cloudiness.html">
-                          <img class="panel" src="Resources/assets/Images/Fig3.png" alt="Cloudiness Graph">
+                          <img src="Resources/assets/Images/Fig3.png" alt="Cloudiness Graph">
                         </a>
                       </div>
 
                       <div class="col-6">
                         <a href="wind_speed.html">
-                          <img class="panel" src="Resources/assets/Images/Fig4.png" alt="Wind Speed Graph">
+                          <img src="Resources/assets/Images/Fig4.png" alt="Wind Speed Graph">
                         </a>
                       </div>
                     </div>
